[tool.poetry]
name = "longvu"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
huggingface-hub = "^0.26.2"
transformers = "^4.46.1"
vllm = "^0.6.3.post1"
decord = "^0.6.0"
iopath = "^0.1.10"
accelerate = "^1.0.1"
filetype = "^1.2.0"
torch = { version = "^2.4.0", source="torch"}
torchaudio = { version = "^2.4.0", source="torch"}
torchvision = { version = "^0.19.0", source="torch"}

[[tool.poetry.source]]
name = "torch"
priority = "explicit"
url = "https://download.pytorch.org/whl/cu118"
secondary = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
